--- a/src/views/components/news_in_home/news_in_home.css
+++ b/src/views/components/news_in_home/news_in_home.css
@@ -21,5 +21,5 @@
 
 .news-section-label-text {
     display: inline;
-    margin-left: 12px;
+    margin: 0 0 0 12px;
 }
