--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -13,11 +13,15 @@
     margin: 60px auto 60px
 }
 
-
+/*** FIRST ***/
 .first-section {
     padding: 82.5px;
     padding-left: 10%;
     padding-right: 12%;
+}
+
+.first-section-header {
+    margin: 0 0 12px;
 }
 
 /*** SERVICES ***/
@@ -34,20 +38,20 @@
 }
 
 .services-section-caption {
-    margin-bottom: 70px;
+    margin: 0 0 70px;
 }
 
 /*** STORIES ***/
 .stories-section {
-    margin-bottom: 80px;
+    margin-bottom: 40px;
 }
 
 .stories-section-header {
-    margin-bottom: 12px;
+    margin: 0 0 12px;
 }
 
 .stories-section-caption {
-    margin-bottom: 60px;
+    margin: 0 0 60px;
 }
 
 .stories-section-stories {
@@ -74,11 +78,11 @@
 }
 
 .room-section-header {
-    margin-bottom: 16px;
+    margin: 0 0 16px;
 }
 
 .room-section-caption {
-    margin-bottom: 60px;
+    margin: 0 0 60px;
 }
 
 .secondary-button {
